improved hover color change on appended buttons

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -58,3 +58,8 @@
 #leftAddedButton:hover{
     background-color: rgb(28, 173, 183) !important;
 }
+
+
+#leftAddedButton2:hover{
+    background-color: rgb(28, 173, 183) !important;
+}
